Add legacy build and SQLite sessions