@@ -1,19 +1,19 @@
 package xd.firewolfik.spec.command;
 
-import java.util.Map;
+import java.util.Collections;
 import java.util.logging.Level;
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
-import org.jetbrains.annotations.NotNull;
 import xd.firewolfik.spec.Main;
 import xd.firewolfik.spec.config.ConfigService;
 import xd.firewolfik.spec.message.MessageService;
 import xd.firewolfik.spec.service.ActionBarService;
 import xd.firewolfik.spec.service.SpectatorResult;
 import xd.firewolfik.spec.service.SpectatorService;
+import xd.firewolfik.spec.service.SoundService;
 
 public final class SpecCommand implements CommandExecutor {
     private final Main plugin;
@@ -21,36 +21,40 @@ public final class SpecCommand implements CommandExecutor {
     private final MessageService messages;
     private final SpectatorService spectators;
     private final ActionBarService actionBar;
+    private final SoundService sounds;
 
     public SpecCommand(
             Main plugin,
             ConfigService config,
             MessageService messages,
             SpectatorService spectators,
-            ActionBarService actionBar
+            ActionBarService actionBar,
+            SoundService sounds
     ) {
         this.plugin = plugin;
         this.config = config;
         this.messages = messages;
         this.spectators = spectators;
         this.actionBar = actionBar;
+        this.sounds = sounds;
     }
 
     @Override
     public boolean onCommand(
-            @NotNull CommandSender sender,
-            @NotNull Command command,
-            @NotNull String label,
-            @NotNull String[] args
+            CommandSender sender,
+            Command command,
+            String label,
+            String[] args
     ) {
         if (args.length == 1 && args[0].equalsIgnoreCase("reload")) {
             reload(sender);
             return true;
         }
-        if (!(sender instanceof Player moderator)) {
+        if (!(sender instanceof Player)) {
             messages.send(sender, "messages.player-only");
             return true;
         }
+        Player moderator = (Player) sender;
         if (!moderator.hasPermission("spec.use")) {
             messages.send(moderator, "messages.no-permission");
             return true;
@@ -68,21 +72,24 @@ public final class SpecCommand implements CommandExecutor {
 
         Player target = Bukkit.getPlayerExact(args[0]);
         if (target == null || !target.isOnline()) {
-            messages.send(moderator, "messages.player-not-found", Map.of("player", args[0]));
+            messages.send(moderator, "messages.player-not-found", Collections.singletonMap("player", args[0]));
+            sounds.play(moderator, "error");
             return true;
         }
         if (target.equals(moderator)) {
             messages.send(moderator, "messages.cannot-spec-yourself");
+            sounds.play(moderator, "error");
             return true;
         }
 
         SpectatorResult result = spectators.observe(moderator, target);
         if (result == SpectatorResult.TELEPORT_FAILED) {
             messages.send(moderator, "messages.teleport-failed");
+            sounds.play(moderator, "error");
         } else if (result == SpectatorResult.RETELEPORTED) {
-            messages.send(moderator, "messages.spec-teleported", Map.of("player", target.getName()));
+            messages.send(moderator, "messages.spec-teleported", Collections.singletonMap("player", target.getName()));
         } else {
-            messages.send(moderator, "messages.spec-started", Map.of("player", target.getName()));
+            messages.send(moderator, "messages.spec-started", Collections.singletonMap("player", target.getName()));
         }
         return true;
     }
@@ -94,8 +101,12 @@ public final class SpecCommand implements CommandExecutor {
         }
         try {
             config.reload();
+            sounds.reload();
             actionBar.refresh();
             messages.send(sender, "messages.reload-success");
+            if (sender instanceof Player) {
+                sounds.play((Player) sender, "reload");
+            }
         } catch (RuntimeException exception) {
             plugin.getLogger().log(Level.SEVERE, "Could not reload config.yml", exception);
             messages.send(sender, "messages.reload-error");
